--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.0.3",
     "pocketbase": "^0.21.5",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
