--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pocketbase": "^0.21.5",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "server-only": "^0.0.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
