--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run pb:serve & next dev --turbopack",
+    "dev": "pnpm run pb:serve & next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
